--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -36,6 +36,9 @@
         </nav>
     </div><!-- end header -->
 
+    {% include navigation.html %}
+    {{ content }}
+
     <div class="wrapper">
 
         <section>
